tests/baselines/reference/cannotInvokeNewOnIndexExpression.errors.txt
tests/cases/compiler/cannotInvokeNewOnIndexExpression.ts(1,23): error TS2552: Cannot find name 'any'. Did you mean 'NaN'?


==== tests/cases/compiler/cannotInvokeNewOnIndexExpression.ts (1 errors) ====
    var test: any[] = new any[1];
                          ~~~
!!! error TS2552: Cannot find name 'any'. Did you mean 'NaN'?